Fixed Horizontal scroll bar bug

--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@
 /*Navigation*/
 
 .nav {
-    width: 100vw;
     display: flex;
     height: 65px;
 }
@@ -78,7 +77,6 @@
 /*quote*/
 
 .quote {
-    width: 100vw;
     background-color: #709dca;
     height: 600px;
     transition: all 200ms ease-in-out;
@@ -224,7 +222,6 @@ span.active {
 .services {
     background-color: white;
     height: auto;
-    width: 100vw;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 200px;
@@ -295,7 +292,6 @@ span.active {
 /*About US*/
 
 .about {
-    width: 100vw;
     height: auto;
     display: flex;
 }
@@ -350,7 +346,6 @@ span.active {
 /*Prices Table*/
 
 .prices {
-    width: 100vw;
     background: #e7edf3;
     height: auto;
     padding-top: 130px;
